k8s-training/calico/nginx-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: app1
  name: app1
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: app2
  name: app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-sample-linux-deployment
  namespace: app1
  labels:
    app: eks-sample-nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-sample-nginx-app
  template:
    metadata:
      labels:
        app: eks-sample-nginx-app
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/nginx/nginx:1.23
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-nginx-service
  namespace: app1
  labels:
    app: eks-sample-nginx-app
spec:
  type: LoadBalancer
  selector:
    app: eks-sample-nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-sample-linux-deployment2
  namespace: app2
  labels:
    app: eks-sample-nginx-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-sample-nginx-app2
  template:
    metadata:
      labels:
        app: eks-sample-nginx-app2
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/nginx/nginx:1.23
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-nginx-service2
  namespace: app2
  labels:
    app: eks-sample-nginx-app2
spec:
  type: LoadBalancer
  selector:
    app: eks-sample-nginx-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
