k8s-training/calico/default-deni-non-calico.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-app2
  namespace: app2
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
