k8s-training/calico/deny-specific-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: app2
spec:
  podSelector:
    matchLabels:
      app: eks-sample-nginx-app2
  policyTypes:
    - Ingress
    - Egress
