k8s-training/calico/network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-deny-all
  namespace: app2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
